--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         }
     </style>
 <body>
-    <form action="http://localhost:8080/login">
+    <form action="http://crowdify.duckdns.org/login">
           <input type="submit" class="btn btn-primary" value="Login">
     </form>
 </body>
