--- a/public/add.html
+++ b/public/add.html
@@ -42,7 +42,7 @@
 
             var addTrack = function (trkId) {
                 $.ajax({
-                    url: url_base + 'add_track',
+                    url: url_base + '/add_track',
                     data: {
                         id: trkId,
                         token: token
