--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <title>crowdify - crowd-sourced playlists</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Crowdify - crowd-sourced playlists</title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://developer.spotify.com/web-api/static/css/cached.css">
     
     <style type='text/css'>
