add page refreshes, .sh forwards from 80

--- a/public/add.html
+++ b/public/add.html
@@ -45,7 +45,7 @@
                     },
                     success: function(response) {
                         console.log("added %s", trkId)
-                        window.location.href = window.location.href;
+                        location.reload();
                     }
                 });
             };
