mobile and desktop specific css. moved css to file. add page text before and after a song selected

--- a/public/index.html
+++ b/public/index.html
@@ -5,58 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="https://developer.spotify.com/web-api/static/css/cached.css">
-    
-    <style type='text/css'>
-        body {
-            padding: 20px;
-        }
-        figure {
-            width: 40%;
-            margin: 10px auto;
-            border-radius: 60%;
-            overflow: hidden;
-        }
-        div#content {
-            width: 80%;
-            margin: 10px auto;
-        }
-        input#login {
-            width: 15em;
-        }
-        h1 {
-            font-size: 5vw;
-        }
-        h2 {
-            font-size: 2vw;
-        } 
-        input#login {
-            font-size: 1.5vw;
-            width: 15em;
-        }
-
-        @media only screen and (max-device-width: 480px) {
-            figure {
-                width: 80%;
-                margin: 10px auto;
-                border-radius: 60%;
-                overflow: hidden;
-            }
-            div#content {
-                width: 100%;
-                margin: 10px auto;
-            }
-            h1 {
-                font-size: 9vw;
-            }
-            h2 {
-                font-size: 4vw;
-            } 
-            input#login {
-                font-size: 4vw;
-                width: 15em;
-            }
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 
 <body>
@@ -67,7 +16,7 @@
         </figure>
         <h2 align="center">because everyone hates your music</h2>
         <form align="center" action="http://crowdify.duckdns.org/login">
-              <input type="submit" id="login" class="btn btn-primary" value="Login">
+              <input type="submit" class="btn btn-primary" value="Login">
         </form>
     </div>
 </body>
