--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
             <img align="middle" src="http://i.ytimg.com/vi/Vhf5cuXiLTA/maxresdefault.jpg" class="rounded-corners"> 
         </figure>
         <h2 align="center">because everyone hates your music</h2>
-        <form align="center" action="http://crowdify.duckdns.org/login">
+        <form align="center" action="/login">
               <input type="submit" class="btn btn-primary" value="Login">
         </form>
     </div>
